Some additions to CSS. Fonts, sizing and alignment fixes. Changes not definite.

--- a/css/style_dash.css
+++ b/css/style_dash.css
@@ -8,11 +8,21 @@ body {
 .myrow {
     background-color: white;
     margin: 8%;
+    font-family: "Oswald, sans-serif";
+     font-weight:300;
+}
+
+::-webkit-input-placeholder
+{
+    font-family: "Oswald, sans-serif";
+     font-weight:300;
 }
 
 .events {
     
-     font-family: "Helvetica, sans-serif";
+    font-family: 'Oswald', sans-serif;
+    font-size: 50px;
+    font-weight:300;
     display: block;
     background-color: white;
     box-shadow: 0 0 30px #888;
