--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
 }
 .myrow {
 
+    font-family: 'Oswald', sans-serif;
+    font-weight:300;
     display: block;
     box-shadow: 0 0 30px #888;
     margin-top: 15vh;
@@ -15,12 +17,19 @@
     margin-left: auto;
     margin-right: auto;
     background-color: white;
-      
+}
+
+mylogin
+{
+     font-family: 'Oswald', sans-serif;
+     font-weight:300;
 }
 
 .account_header
 {
     margin-top: 70;
+    font-family: 'Oswald', sans-serif;
+    font-weight:300;
 }
 
 nav {
@@ -28,7 +37,7 @@ nav {
 }
 
 nav ul {
-    font-size: 2vh;
+    font-size: 3vh;
     text-transform: uppercase;
 }
 
@@ -39,11 +48,14 @@ body {
 
 .navbar-header button {
     background-color: #006f71;
+    font-family: 'Oswald', sans-serif;
+    font-weight:300;
 }
 
-
-.header_two_one {
-    background-color: #006f71;
+.header_two {
+   
+    font-family: 'Oswald', sans-serif;
+     font-weight:300;
 
 }
 
@@ -65,7 +77,7 @@ body {
 
 .index_page img {
     width: 100%;
-    height: 95.75vh;
+    height: 118.75vh;
     position: absolute;
 
     ;
@@ -75,7 +87,6 @@ body {
 .myregister {
 
     padding: 0% 10% 0% 10%;
-
 }
 
 
@@ -88,8 +99,9 @@ body {
 .text-box1 h1,
 
 label {
-    font-size: 6vw;
-    font-family: "Helvetica, sans-serif";
+    font-size: 15vh;
+    font-family: 'Oswald', sans-serif;
+    font-weight:300;
 
 }
 
@@ -100,7 +112,7 @@ label {
 
 
 .index-login-form {
-    padding: 15% 10% 0% 10%;
+    padding: 20% 10% 0% 10%;
 }
 
 
@@ -249,13 +261,9 @@ label {
 
 .register_view {
     padding: 14% 0% 0% 5%;
-    font-size: 2vh;
+    font-size: 3vh;
     text-transform: uppercase;
 }
-
-
-
-
 
 @media screen and (min-width: 0px) and (max-width: 768px) {
     .index_page {
@@ -267,12 +275,6 @@ label {
 
     }
 
-
-
-    .myrow {
-        width: 90vw;
-          font-family: "Helvetica, sans-serif";
-    }
 
     /* show it on small screens */
 }
